--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
