--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.2",
     "ws": "^8.13.0"
+  },
+  "devDependencies": {
+    "@types/cookie-session": "^2.0.45"
   }
 }
